--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html {
 
 .main-paragraph {
   color: #fff;
-  font-size: 2.5vw;
+  font-size: 1.5rem;
   font-weight: 600;
   line-height: 1.7;
   text-align: center;
