--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,9 @@ html {
 }
 
 .main-paragraph {
-  color: #fff;
-  font-size: 1.5rem;
-  font-weight: 600;
-  line-height: 1.7;
-  text-align: center;
-  margin: 1rem;
+  display: block;
+  width: 88%;
+  margin: 0 auto;
 }
 
 .appreciate {
@@ -72,23 +69,25 @@ html {
 }
 
 .input-label {
+  width: 100%;
+  display: block;
   font-size: 1.8rem;
   font-weight: 700;
   color: rgb(212, 178, 93);
-  margin: 1rem 0;
 }
 
 .id-input-box, 
 .opinion-input-box {
   width: 100%;
-  margin: .5rem;
+  margin-bottom: 1.5rem;
 }
 
 .id-input-field, 
 .opinion-input-field {
   width: 100%;
   max-width: 100%;
-  margin: .5rem 0;
+  margin-top: -5px;
+  margin-bottom: .5rem;
   padding: 1rem;
   border-radius: 5px;
   border: solid 2px rgb(218, 123, 60);
@@ -118,6 +117,10 @@ html {
 
 .attention {
   height: 1.2rem;
+}
+
+.screenshot-box-label {
+  margin: 1rem 0;
 }
 
 .screenshot-box {
@@ -200,7 +203,7 @@ footer img {
   background-size: cover;
   background-position: center;
   max-width: 36rem;
-  height: 23rem;
+  height: 27rem;
   position: absolute;
   top: 0;
   left: 0;
